--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "prettier": "^3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3",
     "tailwindcss": "3.3.3"
+  },
+  "volta": {
+    "node": "18.17.1"
   }
 }
