--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
   "dependencies": {
     "class-variance-authority": "^0.7.0",
     "next": "13.4.19",
-    "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^1.14.0",
-    "typescript": "5.1.6"
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
+    "typescript": "5.1.6",
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
     "@types/node": "20.5.3",
@@ -41,6 +40,10 @@
     "jest-environment-jsdom": "^29.6.4",
     "prettier": "^3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "postcss": "8.4.28"
+  },
+  "volta": {
+    "node": "18.17.1"
   }
 }
