--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "lucide-react": "^0.277.0",
     "next": "^13.5.3",
