--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier:fix": "prettier --write ."
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
