--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@testing-library/user-event": "^14.5.1",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "lucide-react": "^0.277.0",
-    "nanoid": "^5.0.1",
     "next": "^13.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
