dev to  main sync (#32)
* Initial Setup with ESlint, Prettier, TailwindCSS (#2)

* Inital setup with tailwind

* Setup prettier and eslint

* Remove default API routes and Images in public folder

* Move modules from pages to src folder

* Fix import error

* Setup Jest and React Testing libarary (#3)

* Inital setup with tailwind

* Setup prettier and eslint

* Remove default API routes and Images in public folder

* Add jest and rtl

* Move modules from pages to src folder

* Fix import error

* Add Jest and React Testing Library

* Add readme and pin node version to package.json (#4)

* Add readme and pin node version to package.json

* Move typescript and other packages to dev dependencies (#5)

* Create Input and Button components and upgrade next.js version (#12)

* Create Input and Button components and upgrade next.js version

* Add Coverage

* Add test case for button as a link

* Clean up button props

* Create Login & Signup pages and client util (#13)

* Create Input and Button components and upgrade next.js version

* Add Coverage

* Add test case for button as a link

* Clean up button props

* Add axios, make login page

* create login page

* Create signup page

* Add test for classname

* Remove comment

* Create form Creation page (#16)

* Add functionality to add blocks to from creation page

* Handle delete & focus on addition and deletion

* make placeholder absolute

* Add hidden property to input placeholder

* Move focus related functions into their own util

* Make a common util to hanle focus when adding / remove a block

* Move the delete on focus trigger from store to editable-div component

* remove onDelete from props in editable div component

* temp changes

* Fix build errors

* Remove unused files

* Add .env to git ignore

* Remove comment

* Setup storybook with support for tailwind, next/font & path aliases (#2)

* Setup storybook with s

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:react-hooks/recommended",
     "prettier",
-    "next/core-web-vitals"
+    "next/core-web-vitals",
+    "plugin:storybook/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "plugins": [
