--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "1.0.2",
+    "@tanstack/react-query": "^5.24.1",
     "@testing-library/user-event": "14.5.1",
     "axios": "1.6.0",
     "class-variance-authority": "0.7.0",
