--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,26 +1,32 @@
 name: Test
 
 on:
-  pull_request:
-    branches: ["*"]
+    pull_request:
+        branches: ["*"]
 
 jobs:
-  tests:
-    runs-on: ubuntu-latest
-    name: Run tests
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+    tests:
+        runs-on: ubuntu-latest
+        name: Run tests
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+              with:
+                  fetch-depth: 0
 
-      - name: Setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.17.1
-          cache: "npm"
+            - name: Setup node
+              uses: actions/setup-node@v3
+              with:
+                  node-version: 18.17.1
+                  cache: "npm"
 
-      - name: Install dependencies
-        run: npm i
+            - name: Install dependencies
+              run: npm i
 
-      - run: npm run test:ci
+            - name: Load env
+              run: |
+                  set -a
+                  . ../environments/test.env
+                  set +a
+
+            - run: npm run test:ci
