--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,4 @@ jobs:
             - name: Install dependencies
               run: npm i
 
-            - name: Load env & run tests
-              run: |
-                  . ./environments/test.env
-                  npm run test:ci
+            - run: npm run test:ci
