--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
         "jest-environment-jsdom": "29.6.4",
         "postcss": "8.4.31",
         "postcss-loader": "7.3.3",
-        "prettier": "3.0.2",
-        "prettier-plugin-tailwindcss": "0.5.3",
+        "prettier": "^3.0.2",
+        "prettier-plugin-tailwindcss": "^0.5.3",
         "storybook": "7.5.1",
         "style-loader": "3.3.3",
         "tailwindcss": "3.3.3",
