--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
   */
     "editor.formatOnSave": true,
     "editor.tabSize": 4,
+    "editor.insertSpaces": false,
     "prettier.tabWidth": 4,
     "prettier.printWidth": 120,
     "editor.rulers": [
