--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@testing-library/user-event": "14.5.1",
         "axios": "1.6.0",
         "class-variance-authority": "0.7.0",
+        "dayjs": "^1.11.10",
         "lucide-react": "0.344.0",
         "nanoid": "5.0.4",
         "next": "13.5.3",
@@ -59,10 +60,11 @@
         "eslint-plugin-storybook": "0.6.15",
         "jest": "29.6.4",
         "jest-environment-jsdom": "29.6.4",
+        "next-router-mock": "^0.9.12",
         "postcss": "8.4.31",
         "postcss-loader": "7.3.3",
-        "prettier": "3.0.2",
-        "prettier-plugin-tailwindcss": "0.5.3",
+        "prettier": "^3.0.2",
+        "prettier-plugin-tailwindcss": "^0.5.3",
         "storybook": "7.5.1",
         "style-loader": "3.3.3",
         "tailwindcss": "3.3.3",
